T.o.M.E 2.3.7 (ah)

- Remove item pval from antimagic field strength calculation since it
  may be both non-zero and invisible (to the player).
- Miscellaneous 64 bit fixes.
- Fix Lua errors when hitting <ESC> while choosing spell.

T.o.M.E 2.3.6 (ah)

- Don't generate impassable glass walls.
- Mark *all* quest monsters properly.
- Avoid generating up staircases in selected dungeons.
- Mimicry cloaks of Abomination now aggravate properly.
- Properly handle item set effects with certain traps.
- Fix crash bug during character dumps.
- Misc. Mimicry fixes.
- Prevent immunities from Balrog Form persisting too long.
- Fix for loading/saving on Linux distribution using Fortify.
- Fix for module directory paths.
- Fix miscellaneous problems on 64-bit platforms.
- Princess room should now always be generated.
- Extra Blows applies to barehand combat too.






T.o.M.E 2.3.5 aka "Into the unknown" changes

Interface changes:
- The X11 and Xaw interfaces now save the dungeon and player when the
  window is closed.
- Fixed cpu churning bug that occurs when using certain window managers and
  ToME is maximized.

Gameplay changes:
- Player speed now set correctly when Demon Hide corruption is enabled.
- ToME now correctly sets various Balrog flags when player in Balrog form.
- ToME now correctly sets the teleport flags when teleport corruption is
  enabled.
- ToME now uses the qrand7.map file when generating princess quests.
- Bigs changes for generate.c to get it to produce the princess and thrain
  rooms. Also code clean up of room geranation code.

Object changes:
- Slings of Buckland can now be generated.
- Wiki Bug 510. Added the WIELD_CAST flag to all artifact instruments to
  fix problems when casting spells.

Misc changes:
- Fixed small typo in the commands help file.
- Added help for the Mathom House.
- Fixed various compile time warnings in various files.
- Added makefile support for main-gtk2.c in makefile.std